wrap share link in span to fix ajax callback

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -74,7 +74,7 @@ input[type="submit"], .btn_blue {
   border: none;
   background: #e4edf4;
   padding:5px;
-  color: #3e6d8e;
+  color: #3e6d8e !important;
 
   &:hover {
     cursor: pointer;
@@ -82,7 +82,7 @@ input[type="submit"], .btn_blue {
 }
 
 .btn_yellow {
-  color: #CC6600;
+  color: #CC6600 !important;
   background: #FFFFB2;
   border: none;
   padding:5px;
